--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-29 02:46 -->
+<!-- 2022-11-30 02:45 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf1f9850">1. What is Vectored IO</a></li>
-<li><a href="#org247341a">2. Vectored IO in Linux</a></li>
-<li><a href="#org340cba8">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org09a2351">4. Examples</a>
+<li><a href="#orgb632eb2">1. What is Vectored IO</a></li>
+<li><a href="#org99e49be">2. Vectored IO in Linux</a></li>
+<li><a href="#org7376f6c">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#orgf67fb05">4. Examples</a>
 <ul>
-<li><a href="#org0b3a8c8">4.1. <code>write()</code></a></li>
-<li><a href="#orgd971fc5">4.2. <code>writev()</code></a></li>
+<li><a href="#org0223f5f">4.1. <code>write()</code></a></li>
+<li><a href="#org1d27e56">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-orgf1f9850" class="outline-2">
-<h2 id="orgf1f9850"><span class="section-number-2">1.</span> <a href="#orgf1f9850">What is Vectored IO</a></h2>
+<div id="outline-container-orgb632eb2" class="outline-2">
+<h2 id="orgb632eb2"><span class="section-number-2">1.</span> <a href="#orgb632eb2">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org247341a" class="outline-2">
-<h2 id="org247341a"><span class="section-number-2">2.</span> <a href="#org247341a">Vectored IO in Linux</a></h2>
+<div id="outline-container-org99e49be" class="outline-2">
+<h2 id="org99e49be"><span class="section-number-2">2.</span> <a href="#org99e49be">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org340cba8" class="outline-2">
-<h2 id="org340cba8"><span class="section-number-2">3.</span> <a href="#org340cba8">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org7376f6c" class="outline-2">
+<h2 id="org7376f6c"><span class="section-number-2">3.</span> <a href="#org7376f6c">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org09a2351" class="outline-2">
-<h2 id="org09a2351"><span class="section-number-2">4.</span> <a href="#org09a2351">Examples</a></h2>
+<div id="outline-container-orgf67fb05" class="outline-2">
+<h2 id="orgf67fb05"><span class="section-number-2">4.</span> <a href="#orgf67fb05">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org0b3a8c8" class="outline-3">
-<h3 id="org0b3a8c8"><span class="section-number-3">4.1.</span> <a href="#org0b3a8c8"><code>write()</code></a></h3>
+<div id="outline-container-org0223f5f" class="outline-3">
+<h3 id="org0223f5f"><span class="section-number-3">4.1.</span> <a href="#org0223f5f"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgd971fc5" class="outline-3">
-<h3 id="orgd971fc5"><span class="section-number-3">4.2.</span> <a href="#orgd971fc5"><code>writev()</code></a></h3>
+<div id="outline-container-org1d27e56" class="outline-3">
+<h3 id="org1d27e56"><span class="section-number-3">4.2.</span> <a href="#org1d27e56"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-29 02:46</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 02:45</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
