--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 11:00 -->
+<!-- 2022-11-30 11:14 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,16 +45,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7c2ad36">1. 推送</a></li>
-<li><a href="#orgf0b0a50">2. Git</a></li>
-<li><a href="#orgc7a0b23">3. XBox</a></li>
+<li><a href="#orgb260383">1. 推送</a></li>
+<li><a href="#orgde3c242">2. Git</a></li>
+<li><a href="#orgae57004">3. XBox</a></li>
+<li><a href="#org9263e1b">4. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org7c2ad36" class="outline-2">
-<h2 id="org7c2ad36"><span class="section-number-2">1.</span> <a href="#org7c2ad36">推送</a></h2>
+<div id="outline-container-orgb260383" class="outline-2">
+<h2 id="orgb260383"><span class="section-number-2">1.</span> <a href="#orgb260383">推送</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -64,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf0b0a50" class="outline-2">
-<h2 id="orgf0b0a50"><span class="section-number-2">2.</span> <a href="#orgf0b0a50">Git</a></h2>
+<div id="outline-container-orgde3c242" class="outline-2">
+<h2 id="orgde3c242"><span class="section-number-2">2.</span> <a href="#orgde3c242">Git</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -79,8 +80,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc7a0b23" class="outline-2">
-<h2 id="orgc7a0b23"><span class="section-number-2">3.</span> <a href="#orgc7a0b23">XBox</a></h2>
+<div id="outline-container-orgae57004" class="outline-2">
+<h2 id="orgae57004"><span class="section-number-2">3.</span> <a href="#orgae57004">XBox</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
@@ -90,13 +91,23 @@
 </ul>
 </div>
 </div>
+
+<div id="outline-container-org9263e1b" class="outline-2">
+<h2 id="org9263e1b"><span class="section-number-2">4.</span> <a href="#org9263e1b">Bilibili</a></h2>
+<div class="outline-text-2" id="text-4">
+<ul class="org-ul">
+<li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
+<li><a href="https://github.com/BililiveRecorder/BililiveRecorder">B站录播姬</a> 直播录制</li>
+</ul>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-30 10:59</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:00</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-30 11:13</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:14</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
