Update from https://github.com/thebesttv/eserver-static/commit/be4bd47f92f987a22d94267331b163a61d7b5b71

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 11:14 -->
+<!-- 2022-12-01 02:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org37db5e6">1. 暑假</a>
+<li><a href="#org95923e7">1. 暑假</a>
 <ul>
-<li><a href="#org14fcc29">1.1. 夏令营</a></li>
+<li><a href="#orgedefb24">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org0103f42">2. 打工</a></li>
-<li><a href="#orgbcdd8b6">3. 我的928</a>
+<li><a href="#org3ebf674">2. 打工</a></li>
+<li><a href="#org2c63e54">3. 我的928</a>
 <ul>
-<li><a href="#org770b1a3">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org49d93ec">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org9d5a924">4. 他们的928</a></li>
-<li><a href="#orgfb3afba">5. 总结</a></li>
+<li><a href="#orgf43bc79">4. 他们的928</a></li>
+<li><a href="#orgb1f9733">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org70faa89">
+<figure id="orgabaece1">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org37db5e6" class="outline-2">
-<h2 id="org37db5e6"><span class="section-number-2">1.</span> <a href="#org37db5e6">暑假</a></h2>
+<div id="outline-container-org95923e7" class="outline-2">
+<h2 id="org95923e7"><span class="section-number-2">1.</span> <a href="#org95923e7">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org14fcc29" class="outline-3">
-<h3 id="org14fcc29"><span class="section-number-3">1.1.</span> <a href="#org14fcc29">夏令营</a></h3>
+<div id="outline-container-orgedefb24" class="outline-3">
+<h3 id="orgedefb24"><span class="section-number-3">1.1.</span> <a href="#orgedefb24">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org0103f42" class="outline-2">
-<h2 id="org0103f42"><span class="section-number-2">2.</span> <a href="#org0103f42">打工</a></h2>
+<div id="outline-container-org3ebf674" class="outline-2">
+<h2 id="org3ebf674"><span class="section-number-2">2.</span> <a href="#org3ebf674">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgbcdd8b6" class="outline-2">
-<h2 id="orgbcdd8b6"><span class="section-number-2">3.</span> <a href="#orgbcdd8b6">我的928</a></h2>
+<div id="outline-container-org2c63e54" class="outline-2">
+<h2 id="org2c63e54"><span class="section-number-2">3.</span> <a href="#org2c63e54">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org770b1a3" class="outline-3">
-<h3 id="org770b1a3"><span class="section-number-3">3.1.</span> <a href="#org770b1a3">928演唱会(bushi</a></h3>
+<div id="outline-container-org49d93ec" class="outline-3">
+<h3 id="org49d93ec"><span class="section-number-3">3.1.</span> <a href="#org49d93ec">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org30ea08a">
+<figure id="org5b436ef">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc08804a">
+<figure id="orgb99fcbb">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9d5a924" class="outline-2">
-<h2 id="org9d5a924"><span class="section-number-2">4.</span> <a href="#org9d5a924">他们的928</a></h2>
+<div id="outline-container-orgf43bc79" class="outline-2">
+<h2 id="orgf43bc79"><span class="section-number-2">4.</span> <a href="#orgf43bc79">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgfb3afba" class="outline-2">
-<h2 id="orgfb3afba"><span class="section-number-2">5.</span> <a href="#orgfb3afba">总结</a></h2>
+<div id="outline-container-orgb1f9733" class="outline-2">
+<h2 id="orgb1f9733"><span class="section-number-2">5.</span> <a href="#orgb1f9733">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:14</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-01 02:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
