--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 11:14 -->
+<!-- 2022-12-01 02:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc23bb41">1. 一大早</a></li>
-<li><a href="#org74ee107">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org33945b1">3. 科研训练</a></li>
-<li><a href="#org80f17c0">4. 520</a></li>
+<li><a href="#org86868f6">1. 一大早</a></li>
+<li><a href="#org93ae5d0">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orgfbe428a">3. 科研训练</a></li>
+<li><a href="#orgaf004e3">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgc23bb41" class="outline-2">
-<h2 id="orgc23bb41"><span class="section-number-2">1.</span> <a href="#orgc23bb41">一大早</a></h2>
+<div id="outline-container-org86868f6" class="outline-2">
+<h2 id="org86868f6"><span class="section-number-2">1.</span> <a href="#org86868f6">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-org74ee107" class="outline-2">
-<h2 id="org74ee107"><span class="section-number-2">2.</span> <a href="#org74ee107">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org93ae5d0" class="outline-2">
+<h2 id="org93ae5d0"><span class="section-number-2">2.</span> <a href="#org93ae5d0">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org33945b1" class="outline-2">
-<h2 id="org33945b1"><span class="section-number-2">3.</span> <a href="#org33945b1">科研训练</a></h2>
+<div id="outline-container-orgfbe428a" class="outline-2">
+<h2 id="orgfbe428a"><span class="section-number-2">3.</span> <a href="#orgfbe428a">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-org80f17c0" class="outline-2">
-<h2 id="org80f17c0"><span class="section-number-2">4.</span> <a href="#org80f17c0">520</a></h2>
+<div id="outline-container-orgaf004e3" class="outline-2">
+<h2 id="orgaf004e3"><span class="section-number-2">4.</span> <a href="#orgaf004e3">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:14</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-01 02:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
