--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 11:14 -->
+<!-- 2022-12-01 02:46 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org189346f">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org3ff5402">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org4e52d8a">1.1. window config &amp; register</a></li>
-<li><a href="#orgf516f11">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org8a6d2e7">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgf10e0b6">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org68ab8b5">1.1. window config &amp; register</a></li>
+<li><a href="#orgaf88cab">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org09f5b16">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgb77875d">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org189346f" class="outline-2">
-<h2 id="org189346f"><span class="section-number-2">1.</span> <a href="#org189346f">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org3ff5402" class="outline-2">
+<h2 id="org3ff5402"><span class="section-number-2">1.</span> <a href="#org3ff5402">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org4e52d8a" class="outline-3">
-<h3 id="org4e52d8a"><span class="section-number-3">1.1.</span> <a href="#org4e52d8a">window config &amp; register</a></h3>
+<div id="outline-container-org68ab8b5" class="outline-3">
+<h3 id="org68ab8b5"><span class="section-number-3">1.1.</span> <a href="#org68ab8b5">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf516f11" class="outline-3">
-<h3 id="orgf516f11"><span class="section-number-3">1.2.</span> <a href="#orgf516f11"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgaf88cab" class="outline-3">
+<h3 id="orgaf88cab"><span class="section-number-3">1.2.</span> <a href="#orgaf88cab"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org8a6d2e7" class="outline-3">
-<h3 id="org8a6d2e7"><span class="section-number-3">1.3.</span> <a href="#org8a6d2e7"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org09f5b16" class="outline-3">
+<h3 id="org09f5b16"><span class="section-number-3">1.3.</span> <a href="#org09f5b16"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgf10e0b6" class="outline-3">
-<h3 id="orgf10e0b6"><span class="section-number-3">1.4.</span> <a href="#orgf10e0b6"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgb77875d" class="outline-3">
+<h3 id="orgb77875d"><span class="section-number-3">1.4.</span> <a href="#orgb77875d"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:14</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-01 02:46</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
